--- a/Telegraph/Enterprise.entitlements
+++ b/Telegraph/Enterprise.entitlements
@@ -11,7 +11,7 @@
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
+		<string>iCloud.my.telegram.xd</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -21,13 +21,13 @@
 	<true/>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
+		<string>iCloud.my.telegram.xd</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.telegram.TelegramEnterprise</string>
+		<string>group.CY-3AA5A1A4-667F-11E8-B557-787B8ABA0C98.org.telegram.TelegramHD</string>
 	</array>
 </dict>
 </plist>
