--- a/Watch/App/Info.plist
+++ b/Watch/App/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIcons</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>$(TELEGRAPH_WATCHAPP_BUNDLE_ID)</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -30,7 +30,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>$(TELEGRAPH_BUNDLE_ID)</string>
+	<string>my.org.telegram.TelegramEnterprise</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
