--- a/Watch/App/watchkitapp.entitlements
+++ b/Watch/App/watchkitapp.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.telegram.TelegramEnterprise</string>
+		<string>group.CY-3AA5A1A4-667F-11E8-B557-787B8ABA0C98.org.telegram.TelegramHD</string>
 	</array>
 </dict>
 </plist>
